--- a/Front/signUp.html
+++ b/Front/signUp.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/PRoyecto/form.css">
+    <link rel="stylesheet" href="/PRoyecto/Front/estilos/form.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Bungee+Tint&family=Protest+Guerrilla&family=Sofadi+One&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Registrarse</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -27,7 +27,9 @@
     <a href="/PRoyecto/index.html"><button>Volver</button></a>
 </div>
 
-
+/*  javaScript */ 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/PRoyecto/Front/javaScript/User.js"></script>
 
 </body>
 </html>
