--- a/Front/Agregar _anciones.html
+++ b/Front/Agregar _anciones.html
@@ -2,23 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/PRoyecto/form.css">
+    <link rel="stylesheet" href="/PRoyecto/Front/estilos/form.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Bungee+Tint&family=Protest+Guerrilla&family=Sofadi+One&display=swap" rel="stylesheet">
     <title>Agregar canciones</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h3>Agregar canciones</h3>
-<form> 
+    <div class="Titulo"> Agregar Cancion </Div>
 
-    <input type="text" Mail="Mail" placeholder="Título ">
-    <input type="text" Mail="Mail" placeholder="Duración ">
-    
-    <input type="text" Mail="Mail" placeholder="Link a la canción en YouTube. ">
-    <br>
-   
-    <libel><input type="submit" value="Enviar"></libel>
+    <form>     
+
+        <input type="text" Mail="Mail" placeholder="Título ">
+        <br>
+        <input type="text" Mail="Mail" placeholder="Duración ">
+        <br>
+        <input type="text" Mail="Mail" placeholder="Link a la canción en YouTube. ">
+        <br>
+        <libel><input type="submit" value="Enviar"></libel>
+    </form>    
+
+  
 </form>
 
 <a href="/PRoyecto/index.html"><button>Volver</button></libel></a>
