--- a/Front/Login.html
+++ b/Front/Login.html
@@ -2,26 +2,29 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/PRoyecto/form.css">
+    <link rel="stylesheet" href="/PRoyecto/Front/estilos/form.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Bungee+Tint&family=Protest+Guerrilla&family=Sofadi+One&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>>Iniciar Sesison</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h3>LOG IN</h3>
+   <div class="Titulo"> LOG IN </Div>
 <form> 
 
     <input type="text" Mail="Mail" placeholder="Mail ">
     
-    <libel for="Contraseña">  Comtraseña: <input type="text" id="Contraseña" placeholder="" ></libel>
+    <input type="text" id="Contraseña" placeholder=" Contraseña" ></imput>
     <br>
    
     <libel><input type="submit" value="Enviar"></libel>
 </form>
-<a href="/PRoyecto/index.html"><button>Volver</button></libel></a>
 
+<a href="index.html"><button>Volver</button></a>
 
+/*  javaScript */ 
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="/PRoyecto/Front/javaScript/User.js"></script>
 
 </body>
 </html>
