--- a/Front/addAlbum.html
+++ b/Front/addAlbum.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/PRoyecto/form.css">
+    <link rel="stylesheet" href="/PRoyecto/Front/estilos/form.css">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&family=Bungee+Tint&family=Protest+Guerrilla&family=Sofadi+One&display=swap" rel="stylesheet">
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
