--- a/Front/Eventos.html
+++ b/Front/Eventos.html
@@ -21,15 +21,15 @@
 
            <li>20 Diciembre 2024, Distrito de Koto, Japón, Teatro Jardín de Tokio </li>
             <button id="comprarTicket" class="entrada">Comprar Ticket</button>
-            <p>Entradas disponibles: <span id="ticketsDisponibles">100</span></p><br>
+            <p>Entradas disponibles: <span id="comprarTicket">100</span></p><br>
           
            <li> 13 Enero 2025 Ciudad de Chiba, Japón Salón de eventos Makuhari Messe Makuhari </li>
            <button id="comprarTicket" class="entrada">Comprar Ticket</button>
-           <p>Entradas disponibles: <span id="ticketsDisponibles">100</span></p><br>
+           <p>Entradas disponibles: <span id="comprarTicket">100</span></p><br>
 
            <li>15 Febrero 2025 Yokohama, Japón, Pía Arena MM </li>
            <button id="comprarTicket" class="entrada">Comprar Ticket</button>           
-           <p>Entradas disponibles: <span id="ticketsDisponibles">100</span></p>  <br>
+           <p>Entradas disponibles: <span id="comprarTicket">100</span></p>  <br>
 
 
 
