--- a/Front/index.html
+++ b/Front/index.html
@@ -52,7 +52,7 @@
     <div class="contenedor">
         <p class="RING">ROBOT  </p>
         <button class="Amarillo"><a href="love.html"> <IMG src="/PRoyecto/Front/imagenes/portada_Ring.jpg"> </a></button>
-         <div class="corazon"> <button id="clik">me gusta</button></div>
+         <div class="corazon"> <button id="corazon">me gusta</button></div>
      </div>
    
     
